change help links.

--- a/ui/src/app/widget/select-widget-type.tpl.html
+++ b/ui/src/app/widget/select-widget-type.tpl.html
@@ -49,7 +49,7 @@
                         <md-button class="tb-card-button md-raised md-primary" layout="column"
                                    ng-click="vm.typeSelected(vm.types.widgetType.rpc.value)">
                             <md-icon class="material-icons tb-md-96"
-                                     aria-label="{{ vm.types.widgetType.rpc.name | translate }}" md-svg-icon="mdi:developer-board">
+                                     aria-label="{{ vm.types.widgetType.rpc.name | translate }}">touch_app
                             </md-icon>
                             <span translate>{{vm.types.widgetType.rpc.name}}</span>
                         </md-button>
