--- a/ui/src/app/widget/widget-library.tpl.html
+++ b/ui/src/app/widget/widget-library.tpl.html
@@ -15,6 +15,7 @@
     limitations under the License.
 
 -->
+<div>AAA</div>
 <section ng-show="!$root.loading && vm.noData()" layout-align="center center"
 		 style="text-transform: uppercase; display: flex; z-index: 1;"
 		 class="md-headline tb-absolute-fill">
@@ -49,7 +50,7 @@
 					   class="tb-btn-footer md-accent md-hue-2 md-fab"
 					   aria-label="{{ 'widget.add-widget-type' | translate }}">
 				<md-tooltip md-direction="top">
-					{{ 'widget.add-widget-type' | translate }}
+					{{ 'widget.add-widget-type' | translate }}BBB
 				</md-tooltip>
 				<ng-md-icon icon="add"></ng-md-icon>
 			</md-button>
