--- a/ui/src/app/dashboard/dashboard.tpl.html
+++ b/ui/src/app/dashboard/dashboard.tpl.html
@@ -20,6 +20,7 @@
 <md-content style="padding-top: 150px;" flex tb-expand-fullscreen="vm.widgetEditMode || vm.iframeMode || forceFullscreen "
     expand-button-id="dashboard-expand-button" hide-expand-button="vm.hideFullscreenButton()" expand-tooltip-direction="bottom"
     ng-if="vm.dashboard">
+    <!--工具栏-->
     <section class="tb-dashboard-toolbar" ng-show="vm.showDashboardToolbar()" ng-class="{ 'tb-dashboard-toolbar-opened': vm.toolbarOpened, 'tb-dashboard-toolbar-closed': !vm.toolbarOpened }">
         <tb-dashboard-toolbar ng-show="!vm.widgetEditMode" force-fullscreen="forceFullscreen" toolbar-opened="vm.toolbarOpened"
             on-trigger-click="vm.openToolbar()">
@@ -45,7 +46,7 @@
                         </md-tooltip>
                     </md-button>
                     <md-button id="dashboard-expand-button" aria-label="{{ 'fullscreen.fullscreen' | translate }}"
-                        class="md-icon-button">
+                        class="md-icon-button">AA
                     </md-button>
                     <md-button ng-show="vm.isEdit || vm.displayExport()" aria-label="{{ 'action.export' | translate }}"
                         class="md-icon-button" ng-click="vm.exportDashboard($event)">
