--- a/ui/src/app/layout/home.tpl.html
+++ b/ui/src/app/layout/home.tpl.html
@@ -65,6 +65,7 @@
 			 ng-click="vm.openSearch()">
 				<md-icon aria-label="{{ 'action.search' | translate }}" class="material-icons">search</md-icon>
 			</md-button>
+			<input id="tb-test" ng-model="loc.loc" />
 			<md-button class="md-icon-button">
 				<md-icon class="material-icons">notifications</md-icon>
 			</md-button>
@@ -81,7 +82,7 @@
 	 ng-disabled="!$root.loading" ng-show="$root.loading"></md-progress-linear>
 	<!--菜单栏-->
 	<md-nav-bar md-selected-nav-item="currentNavItem">
-		<md-nav-item md-nav-href="/dashboards" name="page1">可视大屏</md-nav-item>
+		<md-nav-item md-nav-click="vm.openDashboard('7eca6470-f124-11e8-9eca-119bc8fa90df')" name="visDashboard">可视大屏</md-nav-item>
 		<md-nav-item md-nav-href="#" name="page2">项目档案</md-nav-item>
 		<md-nav-item md-nav-href="#" name="page3">巡检维保</md-nav-item>
 		<md-nav-item md-nav-href="/integrated" name="page4">安全监测</md-nav-item>
@@ -92,7 +93,7 @@
 		<md-nav-item md-nav-href="/home" name="page7">系统管理</md-nav-item>
 	</md-nav-bar>
 	<!--地图内容显示区-->
-	<div id="cesiumContainer"></div>
+	<div id="cesiumContainer" ng-show="vm.showCesium"></div>
 	<!--图标内容显示区-->
 	<div flex layout="column" id="toast-parent" style="position: relative;">
 		<md-content ng-cloak flex layout="column" class="page-content" ui-view name="content"></md-content>
