--- a/ui/src/app/layout/home.tpl.html
+++ b/ui/src/app/layout/home.tpl.html
@@ -94,7 +94,7 @@
 	</md-nav-bar>
 	<!--地图内容显示区-->
 	<div id="cesiumContainer" ng-show="vm.showCesium"></div>
-	<!--图标内容显示区-->
+	<!--基础内容显示区-->
 	<div flex layout="column" id="toast-parent" style="position: relative;">
 		<md-content ng-cloak flex layout="column" class="page-content" ui-view name="content"></md-content>
 	</div>
