--- a/ui/src/app/login/login.tpl.html
+++ b/ui/src/app/login/login.tpl.html
@@ -46,7 +46,7 @@
                             </md-button>
                         </div>
                     </div>
-                    <md-button class="md-raised md-accent" type="submit">{{ 'login.login' | translate }}</md-button>
+                    <md-button class="md-raised" type="submit">{{ 'login.login' | translate }}</md-button>
                 </div>
             </form>
         </md-card-content>
