cesium integrated into dev configuration.

--- a/ui/src/app/integrated/integrated.tpl.html
+++ b/ui/src/app/integrated/integrated.tpl.html
@@ -51,6 +51,7 @@
 
 <md-content flex tb-expand-fullscreen tb-confirm-on-exit is-dirty="vm.isConfirmOnExit"
             expand-tooltip-direction="bottom" layout="column" on-fullscreen-changed="vm.isFullscreen = expanded">
+    <div id='cesiumContainer'></div>        
     <section class="tb-rulechain-container" flex layout="row">
 
         <!--展开侧边栏按钮-->
