integrated module style modification.

--- a/ui/src/app/integrated/integrated.scss
+++ b/ui/src/app/integrated/integrated.scss
@@ -18,6 +18,10 @@
 
 @import "../../scss/constants";
 
+#cesiumContainer {
+  height: 60%;
+}
+
 .tb-home-links {
   .md-headline {
     font-size: 20px;
