--- a/ui/src/app/integrated/integrated.tpl.html
+++ b/ui/src/app/integrated/integrated.tpl.html
@@ -69,7 +69,7 @@
                 </md-button>
             </section>
         </div> -->
-            <!--左侧表页展开栏-->
+        <!--左侧表页展开栏-->
         <md-sidenav class="et-sensors md-sidenav-left md-whiteframe-4dp"
                     md-disable-backdrop
                     md-is-locked-open="vm.isLibraryOpen"
@@ -101,12 +101,12 @@
                         </md-tooltip>
                     </md-button>
                     <!--左关闭按钮-->
-                    <!-- <md-button class="md-icon-button tb-small" aria-label="Close" ng-click="vm.isLibraryOpen = false">
+                    <md-button class="md-icon-button tb-small" aria-label="Close" ng-click="vm.isLibraryOpen = false">
                         <md-icon aria-label="Close" class="material-icons">chevron_left</md-icon>
                         <md-tooltip md-direction="{{vm.isFullscreen ? 'bottom' : 'top'}}">
                             {{ 'action.close' | translate }}
                         </md-tooltip>
-                    </md-button> -->
+                    </md-button>
                 </div>
             </md-toolbar>
             <md-button ng-click="vm.openDashboard('d96c1d40-de3e-11e8-90b2-6708b10d2f5b')">情报</md-button>
