--- a/ui/src/app/integrated/integrated.tpl.html
+++ b/ui/src/app/integrated/integrated.tpl.html
@@ -85,7 +85,7 @@
                         </md-tooltip>
                     </md-button>
                     <!--输入文本框-->
-                    <div layout="row" md-theme="tb-dark" flex>
+                    <div layout="row" md-theme="bd-dark" flex>
                         <md-input-container flex>
                             <label>&nbsp;</label>
                             <input ng-model="vm.ruleNodeSearch" placeholder="{{'rulenode.search' | translate}}"/>
