--- a/ui/src/app/rulechain/rulechain.tpl.html
+++ b/ui/src/app/rulechain/rulechain.tpl.html
@@ -47,7 +47,7 @@
                                 {{'rulenode.search' | translate}}
                             </md-tooltip>
                         </md-button>
-                        <div layout="row" md-theme="tb-dark" flex>
+                        <div layout="row" md-theme="bd-dark" flex>
                             <md-input-container flex>
                                 <label>&nbsp;</label>
                                 <input ng-model="vm.ruleNodeSearch" placeholder="{{'rulenode.search' | translate}}"/>
