点击home键摄像头聚焦到成都区域

--- a/ui/src/app/integrated/integrated.scss
+++ b/ui/src/app/integrated/integrated.scss
@@ -73,3 +73,12 @@
     }
   }
 }
+
+.cesium-viewer{
+  .cesium-viewer-bottom  {
+    .cesium-widget-credits {
+      display: none;
+    }
+  }
+}
+
