add home button

--- a/ui/src/app/layout/home.tpl.html
+++ b/ui/src/app/layout/home.tpl.html
@@ -62,6 +62,11 @@
 				<md-icon aria-label="{{ 'action.search' | translate }}" class="material-icons">search</md-icon>
 			</md-button>
 			<!--功能菜单-->
+			<md-button class="md-icon-button" ng-click="vm.goHome()">
+				<md-tooltip>首页</md-tooltip>
+				<md-icon class="material-icons">home</md-icon>
+			</md-button>
+			<div>|</div>
 			<md-button class="md-icon-button">
 				<md-tooltip>可视化大屏</md-tooltip>
 				<md-icon class="material-icons">view_comfy</md-icon>
