--- a/ui/src/app/login/login.tpl.html
+++ b/ui/src/app/login/login.tpl.html
@@ -16,7 +16,7 @@
 
 -->
 <md-content layout="row" layout-align="center center" style="width: 100%;">
-    <md-card flex="initial" class="tb-login-card" md-theme="bd-dark">
+    <md-card flex="initial" class="tb-login-card" md-theme="tb-dark">
         <md-card-title>
             <img src="{{vm.logoSvg}}" aria-label="logo" class="tb-login-logo"/>
         </md-card-title>
