get the actual data from restful api at area chart.

--- a/ui/reporter/public/css/style.css
+++ b/ui/reporter/public/css/style.css
@@ -25,21 +25,21 @@
 
 body {
 	font-family: Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
-	color: #4b0f31;
-	background-color: #f1e5e6;
+	color: #ffd000;
+	background-color: #ffffff;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
 a {
 	outline: none;
-	color: #d3394c;
+	color: #fde400;
 	text-decoration: none;
 }
 
 a:hover,
 a:focus {
-	color: #722040;
+	color: #ff3300;
 }
 
 .hidden {
@@ -155,7 +155,7 @@ a:focus {
 }
 
 .content footer {
-	color: #b39295;
+	color: #ff3300;
 	margin-top: 40px;
 }
 
@@ -165,7 +165,7 @@ a:focus {
 }
 
 .box {
-	background-color: #dfc8ca;
+	background-color: #ffd000;
 	padding: 6.25rem 1.25rem;
 }
 
