--- a/ui/src/app/integrated/integrated.tpl.html
+++ b/ui/src/app/integrated/integrated.tpl.html
@@ -15,43 +15,12 @@
     limitations under the License.
 
 -->
-<!-- <div>
-	<div>
-    <md-button ng-click="vm.openDashboard('d96c1d40-de3e-11e8-90b2-6708b10d2f5b')" class="md-raised">
-        战略情报
-    </md-button>
-	    <md-button ng-click="vm.openDashboard('af5dadb0-e5ba-11e8-be95-f3713e6700c3')" class="md-raised">
-        桥梁展示
-    </md-button>
-	    <md-button  class="md-raised">
-        测试标签B
-    </md-button>
-	</div>
-	<div>
-		内容显示区域
-	</div>
-</div> -->
-<!--
 
-    Copyright © 2016-2018 The BeiDouApp Authors
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-        http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
-
--->
-
-<md-content flex tb-expand-fullscreen tb-confirm-on-exit is-dirty="vm.isConfirmOnExit" expand-tooltip-direction="bottom"
-    layout="column" on-fullscreen-changed="vm.isFullscreen = expanded">
-    <div>
-        <echarts option="option"></echarts>
+<md-content flex class="md-padding tb-absolute-fill" layout="column">
+    <!-- <e-chart eoption="eoption" force-render="width" style="width: 100%; height: 100%;">
+    </e-chart> -->
+    <div e-chart eoption="eoption" force-render="width" style="width: 100%; height: 100%;">
     </div>
+
+    <!-- <div e-chart ec-data={{lineOption}}></div> -->
 </md-content>
